--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,13 @@ body {
     background-color: black;
 }
 
+canvas {
+	position: fixed;
+    display: block;
+    max-width: 100vw;
+    max-height: 100%;
+}
+
 .fps-meter {
 	color: white;
 	font-size: 30px;
